<resources>
    <string name="app_name">ProCo</string>
    <string name="todo">TODO</string>

    <string-array name="services">
        <item>Graphic Designer</item>
        <item>Java</item>
        <item>Python</item>
        <item>C++</item>
        <item>Video Editor</item>
        <item>Full Stack Developer</item>
        <item>None</item>
    </string-array>
    <string name="fcm_message"> New Notification </string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">dafault</string>
    <string name="view_profile">View Profile</string>
    <string name="unmatch">Unmatch</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>
    <string name="i_can_share_my">My Expertise</string>
    <string name="i_want_to_borrow">I want help in</string>
    <string name="my_budget_is">My budget is</string>
    <string name="budget">$</string>
    <string name="like">LIKE</string>
    <string name="nope">NOPE</string>
    <string name="name">Name</string>
    <string name="chat">Chat</string>

</resources>