<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clipToPadding="false"
    android:outlineProvider="bounds"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/white_grey_border_bottom"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/item_swipe_left_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:alpha="0"
                    android:background="@drawable/like_border"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/like"
                    android:textColor="@color/likegreen"
                    android:textSize="35sp"/>

                <TextView
                    android:id="@+id/item_swipe_right_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:alpha="0"
                    android:gravity="right"
                    android:background="@drawable/dislike_border"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/nope"
                    android:textColor="@color/dislikered"
                    android:textSize="35sp"
                    tools:ignore="RtlHardcoded" />



            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_grey"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/i_can_share_my"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry,TextSizeCheck" />

                <ImageView
                    android:id="@+id/giveImage"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:paddingStart="10dp"
                    android:scaleType="fitXY"
                    tools:ignore="ImageContrastCheck,RtlSymmetry" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_grey"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/i_want_to_borrow"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry,TextSizeCheck" />

                <ImageView
                    android:id="@+id/needImage"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:paddingStart="10dp"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription,ImageContrastCheck,RtlSymmetry" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_grey"
                    android:paddingStart="@dimen/_10dp"
                    android:text="@string/my_budget_is"
                    android:textSize="20sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/budget"
                    android:background="@color/light_grey"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/i_can_share_my"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>